# tf_server_db

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  Taskfile.yaml  compose.yaml  docker_versions.yaml
config/: alloy.hcl  grafana_dashboard.json  mimir.yaml  otel_collector.yaml  prometheus.yaml
k6/: results.json  stress.js  stress_extreme.js  test.js
migrations/: 0001_create.down.sql  0001_create.up.sql  0002_insert.up.sql
src/: main.rs  metrics.rs  otel.rs  profiler.rs  request_error.rs
terraform/: main.tf  nginx.conf.tpl  providers.tf  variables.tf
