[package]
name = "server_with_db"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["matched-path"] }
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = [
  "experimental_metrics_custom_reader",
  "metrics",
] }
opentelemetry-otlp = { version = "0.31.0", features = ["http-json"] }
anyhow = "1.0.101"
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"

[profile.release]
opt-level = 0
debug = true
rpath = true
lto = false
debug-assertions = true
codegen-units = 4
force-frame-pointers = true
